--- a/main.css
+++ b/main.css
@@ -1,17 +1,26 @@
 
 /* sidebar related */
-.sidebar {
+.sidebar aside {
+
+    width: 100%;
+    min-width: 300px;
+    height: 100%;
+    background-color: #242424;
+    color: white;
+    text-align: center;
+    padding-top: 50px;
+    border-radius: 32px;
+    border: 4px solid #343434;
+}
+.sidebar{
     position: fixed;
+    min-width: 300px;
     top: 0;
     left: 0;
     width: 20%;
-    min-width: 300px;
     height: 100%;
-    background-color: #161625;
-    color: white;
-    text-align: center;
-    padding-top: 20px;
-    border-radius: 16px;
+    padding-right: 10;
+    background-color: #474747;
 }
 
 .profile-pic {
@@ -42,7 +51,7 @@
 
 
 body{
-    background-color: #11111d;
+    background-color: whitesmoke;
 }
 
 h2, h1 {
@@ -66,13 +75,13 @@ p {
     margin-bottom: 10%;
 }
 .section-heading{
-    font-size: 64px;
-    font-weight: 1000px
+    font-size: 32px;
+    font-weight: 1000px;
 }
 .section-content{
     margin-top: 0;
-    font-size: 20px;
-    font-weight: 100;
+    font-size: 16px;
+    font-weight: 400;
     letter-spacing: 1;
     word-spacing: 3;
 }
@@ -92,7 +101,6 @@ p {
     margin-bottom: 10;
     max-width: 90%;
     height: 300px;
-    background-color: #161625;
     border-radius: 8px;
 }
 .card-img img{
@@ -113,21 +121,36 @@ p {
 .card-description{
     margin: auto;
     margin-left: 70;
+    max-height: 100%
 
 }
 .card-description p {
     letter-spacing: 1;
     word-spacing: 3;
-    font-size: 20;
+    font-size: 16;
 
 }
-.card-description h2{
+.card-heading{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+}
+.card-title{
     font-size: 24;
-    color: white;
     font-weight: 5000;
-    background-color: gray;
     border-radius: 4px;
     padding-left: 10;
+    padding-right: 10;
+}
+.timestamp{
+    font-size: 20;
+    color: white;
+    background-color: dimgray;
+    border-radius: 4px;
+    padding-left: 5;
+    padding-right: 5;
+    text-align: center;
 }
 .divider{
     width: 100%;
@@ -162,7 +185,7 @@ footer{
 .roboto {
   font-family: "Roboto", sans-serif;
   font-optical-sizing: auto;
-  font-weight: 200;
+  font-weight: 400;
   font-style: normal;
   font-variation-settings:
     "wdth" 100;
