--- a/main.css
+++ b/main.css
@@ -38,7 +38,7 @@
 }
 .name {
     font-weight: 1000;
-    color: white;
+    color: whitesmoke;
     font-size: 38px;
 }
 .navbar {
@@ -46,6 +46,7 @@
 }
 .sidebar-tagline {
     color: #d4d3c3;
+    font-size: 16;
 }
 /* main */
 
@@ -73,14 +74,15 @@ p {
     margin-top: 10%;
     padding-right: 10%;
     margin-bottom: 10%;
+    width: 60%;
 }
 .section-heading{
-    font-size: 32px;
+    font-size: 48px;
     font-weight: 1000px;
 }
 .section-content{
     margin-top: 0;
-    font-size: 16px;
+    font-size: 20px;
     font-weight: 400;
     letter-spacing: 1;
     word-spacing: 3;
@@ -99,7 +101,7 @@ p {
     align-items: flex-start;
     margin-top: 10;
     margin-bottom: 10;
-    max-width: 90%;
+    width: 100%;
     height: 300px;
     border-radius: 8px;
 }
@@ -127,7 +129,7 @@ p {
 .card-description p {
     letter-spacing: 1;
     word-spacing: 3;
-    font-size: 16;
+    font-size: 20;
 
 }
 .card-heading{
@@ -137,14 +139,14 @@ p {
 
 }
 .card-title{
-    font-size: 24;
+    font-size: 32;
     font-weight: 5000;
     border-radius: 4px;
     padding-left: 10;
     padding-right: 10;
 }
 .timestamp{
-    font-size: 20;
+    font-size: 24;
     color: white;
     background-color: dimgray;
     border-radius: 4px;
@@ -162,11 +164,12 @@ p {
 nav a {
     display: block;
     padding: 15px;
-    color: white;
+    color: whitesmoke;
     text-decoration: none;
     font-size: 20px;
     margin-bottom: 10px;
     margin-top: 10px;
+    font-family: roboto;
 }
 
 nav a:hover {
