--- a/main.css
+++ b/main.css
@@ -1,18 +1,14 @@
-
 /* sidebar related */
 .sidebar aside {
-
     width: 100%;
     min-width: 300px;
     height: 100%;
     background-color: #242424;
-    color: white;
     text-align: center;
     padding-top: 50px;
-    border-radius: 32px;
-    border: 4px solid #343434;
 }
-.sidebar{
+.sidebar {
+    display: none;
     position: fixed;
     min-width: 300px;
     top: 0;
@@ -20,7 +16,6 @@
     width: 20%;
     height: 100%;
     padding-right: 10;
-    background-color: #474747;
 }
 
 .profile-pic {
@@ -30,15 +25,9 @@
     border-radius: 50%;
     margin-bottom: 10px;
 }
-.banner {
-    width: 100%;
-    height: 300px;
-    object-fit: cover;
-    display: block;
-}
 .name {
     font-weight: 1000;
-    color: whitesmoke;
+    color: #EEEEEE;
     font-size: 38px;
 }
 .navbar {
@@ -49,38 +38,99 @@
     font-size: 16;
 }
 /* main */
-
-
-body{
-    background-color: whitesmoke;
+.about {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding-left: 300;
+    padding-right: 300;
+    height: 800px;
+    position: relative;
+    z-index: 1;
+}
+.about > div > h1{
+    color: #EEEEEE;
+    font-size: 92;
+    font-weight: bold;
+}
+.about > div > p{
+    color: #EEEEEE
+}
+.about img {
+    width: 30%;
+    height: auto;
+    border: solid 4px gray;
 }
 
-h2, h1 {
-    color: #343434;
+.about-container {
+    position: relative;
+    width: 100%;
+    height: 90%;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+}
+
+.banner {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('assets/images/banner2.jpg');
+    background-size: cover;
+    background-position: center;
+    z-index: 0;
+    filter: brightness(0.3);
+}
+
+.about div {
+    padding-right: 300;
+}
+header {
+    background-color: #FAF9EE;
+    min-height: 60;
+    position: sticky;
+    top: 0;
+    border-bottom: solid 2px gray;
+    z-index: 2;
+}
+
+body {
+    background-color: #FAF9EE;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+}
+
+h2,
+h1 {
+    color: dimgray;
     font-family: roboto;
-    
 }
 p {
     color: dimgray;
     font-family: roboto;
-
 }
-.head{
+.head {
     width: 100%;
     height: 500px;
 }
-.section{
-    padding-left: 20%;
-    margin-top: 10%;
+.section {
+    padding-left: 10%;
+    padding-top: 10%;
     padding-right: 10%;
-    margin-bottom: 10%;
+    padding-bottom: 10%;
+    margin-top:5%;
+    margin-bottom: 5%;
     width: 60%;
+    border-radius: 16px;
 }
-.section-heading{
+.section-heading {
     font-size: 48px;
     font-weight: 1000px;
 }
-.section-content{
+.section-content {
     margin-top: 0;
     font-size: 20px;
     font-weight: 400;
@@ -88,15 +138,16 @@ p {
     word-spacing: 3;
 }
 /* Cards */
-.features{
+.features {
     margin-top: 50px;
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: left;
-
 }
-.card{
+.card {
+    padding-left: 40;
+    padding-right: 10;
     display: flex;
     align-items: flex-start;
     margin-top: 10;
@@ -104,14 +155,15 @@ p {
     width: 100%;
     height: 300px;
     border-radius: 8px;
+    background-color: #EEEEEE;
 }
-.card-img img{
+.card-img img {
     width: 300px;
     height: 200px;
     object-fit: contain;
     border-radius: 4px;
 }
-.card-img{
+.card-img {
     padding-top: 10;
     padding-bottom: 10;
     height: 100%;
@@ -120,45 +172,41 @@ p {
     justify-content: center;
     border-radius: 4px;
 }
-.card-description{
+.card-description {
     margin: auto;
     margin-left: 70;
-    max-height: 100%
-
+    max-height: 100%;
 }
 .card-description p {
     letter-spacing: 1;
     word-spacing: 3;
     font-size: 20;
-
 }
-.card-heading{
+.card-heading {
     display: flex;
     flex-direction: row;
     align-items: center;
-
 }
-.card-title{
+.card-title {
     font-size: 32;
     font-weight: 5000;
     border-radius: 4px;
     padding-left: 10;
     padding-right: 10;
 }
-.timestamp{
+.timestamp {
     font-size: 24;
-    color: white;
+    color: #EEEEEE;
     background-color: dimgray;
     border-radius: 4px;
     padding-left: 5;
     padding-right: 5;
     text-align: center;
 }
-.divider{
+.divider {
     width: 100%;
     opacity: 30%;
 }
-
 
 /* Navigation links */
 nav a {
@@ -176,21 +224,22 @@ nav a:hover {
     background-color: #444;
 }
 main {
-    margin-left: 20%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 0;
     padding: 0;
 }
-footer{
+footer {
     background-color: #e8e8e8;
     height: 20%;
 }
 
-/* fonts */ 
+/* fonts */
 .roboto {
-  font-family: "Roboto", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
-  font-variation-settings:
-    "wdth" 100;
+    font-family: "Roboto", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-variation-settings: "wdth" 100;
 }
-
