--- a/main.css
+++ b/main.css
@@ -69,6 +69,7 @@
     overflow: hidden;
     display: flex;
     align-items: center;
+    margin-bottom: 300;
 }
 
 .banner {
@@ -118,11 +119,8 @@ p {
 }
 .section {
     padding-left: 10%;
-    padding-top: 10%;
     padding-right: 10%;
     padding-bottom: 10%;
-    margin-top:5%;
-    margin-bottom: 5%;
     width: 60%;
     border-radius: 16px;
 }
@@ -147,7 +145,7 @@ p {
 }
 .card {
     padding-left: 40;
-    padding-right: 10;
+    padding-bottom: 30;
     display: flex;
     align-items: flex-start;
     margin-top: 10;
@@ -175,6 +173,7 @@ p {
 .card-description {
     margin: auto;
     margin-left: 70;
+    padding-right:70;
     max-height: 100%;
 }
 .card-description p {
