--- a/main.css
+++ b/main.css
@@ -24,6 +24,7 @@
     object-fit: cover;
     border-radius: 50%;
     margin-bottom: 10px;
+
 }
 .name {
     font-weight: 1000;
@@ -42,24 +43,47 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    padding-left: 300;
-    padding-right: 300;
+    width: 100%;
     height: 800px;
     position: relative;
     z-index: 1;
 }
+.about-content{
+    padding-left: 15%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
+    width: 50%;
+}
 .about > div > h1{
+    width: 100%;
     color: #EEEEEE;
     font-size: 92;
     font-weight: bold;
 }
 .about > div > p{
+    width:100%;
     color: #EEEEEE
 }
-.about img {
-    width: 30%;
-    height: auto;
+
+.profile-pic-wrapper{
+    padding-top: 50;
+    padding-bottom: 50;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.profile-pic-wrapper h2{
+    width: 100%;
+    color: #EEEEEE;
+    font-size: 64;
+    text-align: center;
+}
+.about .profile-pic-wrapper img {
     border: solid 4px gray;
+    box-shadow: 15px 15px 15px rgba(0,0,0,0.3);
 }
 
 .about-container {
@@ -82,7 +106,15 @@
     background-size: cover;
     background-position: center;
     z-index: 0;
-    filter: brightness(0.3);
+    filter: brightness(1);
+}
+.dark-section{
+    position: absolute;
+    background-color: black;
+    width: 50%;
+    height: 100%;
+    opacity: 0.7;
+
 }
 
 .about div {
@@ -146,6 +178,7 @@ p {
 .section-heading {
     font-size: 48px;
     font-weight: 1000px;
+
 }
 .section-content {
     margin-top: 0;
@@ -173,6 +206,11 @@ p {
     height: 300px;
     border-radius: 8px;
     background-color: #EEEEEE;
+    transition: transform 0.3s ease;
+    box-shadow: 5px 5px 15px rgba(0,0,0,0.3);
+}
+.card:hover {
+  transform: scale(1.05);
 }
 .card-img img {
     width: 300px;
