--- a/main.css
+++ b/main.css
@@ -82,10 +82,12 @@
     font-size: 64;
     margin:0;
     text-align: center;
+    text-shadow: 15px 15px 15px rgba(0,0,0,0.3);
 }
 .profile-pic-wrapper p{
     text-align: center;
     width:100%;
+    text-shadow: 15px 15px 15px rgba(0,0,0,0.3);
 }
 .about .profile-pic-wrapper img {
     border: solid 4px gray;
@@ -298,6 +300,14 @@ main {
 footer {
     background-color: #e8e8e8;
     height: 20%;
+    display: flex;
+    flex-direction: row;
+    align-items:center;
+}
+footer p{
+    padding-left:100;
+    font-size: 20;
+    color: dimgray;
 }
 
 /* fonts */
